--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link type="text/css" rel="stylesheet" href="style.css" />
 
   </head>
   <body>
