--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="utf-8">
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
+
     <link type="text/css" rel="stylesheet" href="style.css" />
 
   </head>
   <body>
-    <header>
-      <h1>William Roberts</h1>
-      <nav></nav>
-
-    </header>
     <div class="main">
-      <div>
-        <h1></h1>
+      <header>
+        <h1>William Roberts</h1>
+        <nav class="menu">
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Random</li>
+          </ul>
+        </nav>
+      </header>
+
+      <div class="info">
+        <h1>About</h1>
+
+        <p>In school studying science, and the human body, but more interested in science.</p>
+        
       </div>
     </div>
   </body>
