--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Istok+Web|Play" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="reset.css" />
+
     <link type="text/css" rel="stylesheet" href="style.css" />
 
 
