--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Istok+Web|Play" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="reset.css" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Slabo+27px" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" href="style.css" />
 
@@ -24,9 +25,9 @@
       <div class="info width">
         <section class="main" id="about">
 
-          <h1 class="head">About</h1>
-
           <p>This page is just for practicing web development. As I learn more and more I will add more content. The end result should be a dynamic, responsive website that also includes a few games.</p>
+
+          <a href="bricks/index.html"><h1>Brick Game</h1></a>
 
         </section>
       </div>
