--- a/index.html
+++ b/index.html
@@ -2,34 +2,73 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Istok+Web|Play" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="reset.css" />
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Slabo+27px" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-" href="stuffs/wbroberts.github-flavicon.png" />
 
 
 
   </head>
   <body>
-    <header>
-      <div class="width">
 
-          <h1 id="main-title" class="">William Barron Roberts</h1>
+    <div>
+      <p><a href="dodger/dodger.html">Click here for game.</a></p>
+    </div>
 
+    <!-- <header>
+
+      <h1 class="name">William <strong>Roberts</strong></h1>
+
+      <div>
+        <h2 class="about-name">Student.</h2>
+
+        <h2 class="about-name">Climber.</h2>
+
+        <h2 class="about-name">Coder.</h2>
       </div>
+
     </header>
 
-      <div class="info width">
-        <section class="main" id="about">
+    <section class="width">
+        <h1>About</h1>
 
-          <p>This page is just for practicing web development. As I learn more and more I will add more content. The end result should be a dynamic, responsive website that also includes a few games.</p>
+        <img src="stuffs/headshot.jpg" alt="William Roberts" class="about-img"/>
+        <div class="section-about">
 
-          <a href="bricks/index.html"><h1>Brick Game</h1></a>
+          <p>Currently a student of science and kinesiology at the University of Utah in the pursuit of learning more about the human body and thinking more analytically like a scientist. In my free time, when I'm not climbing, I </p>
 
-        </section>
+          <p>I have a Bachelor of Science Degree in Psychology and a Business Administration Minor from the University of Utah. As a hobby to compliment school I also practice writing code in Javascript and Ruby. Relatively new to understanding OOP and true programming fundamentals, but has previous experience with HTML, CSS, and PHP.</p>
+
+          <p>Has a solid foundation of human anatomy and physiology. Loves to focus on the biology and chemisty within humans and life.</p>
+
+          <p>Currently writing classic 2D arcade games with pure Javascript and Canvas.</p>
+        </div>
+
+    </section>
+
+    <section class="width">
+      <div class="section-contact">
+
+      <h1>Contact</h1>
+        <form class="contact-form">
+          <div class="form-input">
+            <input type="text" id="name" name="user_name" placeholder="Name"/>
+          </div>
+          <div class="form-input">
+            <input type="email" id="mail" name="user_mail" placeholder="Email"/>
+          </div>
+          <div class="form-input">
+            <textarea id="msg" name="user_message" placeholder="Write a message..."></textarea>
+          </div>
+          <div>
+            <button type="submit">Submit</button>
+          </div>
+        </form>
       </div>
+    </section> -->
+
   </body>
 </html>
