--- a/dodger/dodger.html
+++ b/dodger/dodger.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <link href="dodger.css" type="text/css" rel="stylesheet"  />
-      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
+    <link href="resources/ionicons.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
     <meta charset="utf-8">
     <title>Dodger</title>
   </head>
@@ -12,7 +13,9 @@
         <p class="score">Score: 0</p>
         <p class="lives">Lives: 3</p>
         <canvas id="canvas" width="800" height="400"></canvas>
-        <p class="best-score">Best Score: </p>
+        <!-- <i class="ion-android-volume-up ion-icon-white"></i>
+        <i class="hidden"></i> -->
+        <p class="best-score">High Score: </p>
       </div>
     </div>
     <script src="dodger.js"></script>
